<resources>
    <string name="app_name">Тренажер мозга</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="attention">Тренажер внимания</string>
    <string name="reaction">Тренажер памяти</string>
    <string name="shulte">Таблица Шульте</string>
    <string name="explainShulte"> </string>
    <string name="stub">stub</string>
    <string name="fill">stub</string>
    <string name="explainShylte">Найдите число:</string>
    <string name="memoryWelcome">Найди пару</string>
    <string name="memoryExplain">Необходимо ответить является ли число на экране таким же, что и число до него</string>
    <string name="btnYes">Да</string>
    <string name="btnNo">Нет</string>
    <string name="positivCount">Счетчик правильных ответов: </string>
    <string name="negativCount">Счетчик ошибочных ответов: </string>
    <string name="posCount">Счетчик правильных ответов:</string>
    <string name="negCount">Счетчик неправильных ответов:</string>
    <string name="oneTimeBtn">Готов</string>
    <string name="chronoTime">Время:</string>
    <string name="tvAvg">Среднее время ответов:</string>
    <string name="exit">Вернуться на главный экран</string>
</resources>